# crubwm

./: .gitignore  Cargo.toml  readme.md  run.sh  test-config
configs/: config-catppuccin  config-gruvbox  config-nord  config-onedark  config-tokionight
docs/: configuration-manual.md
src/: errors.rs  ffi.rs  log.rs  main.rs  parsers.rs  utils.rs
src/config/: bar_settings.rs  keybinds.rs  keysyms.rs  mod.rs  options.rs  settings.rs  start_hooks.rs  workspace_settings.rs
src/wm/: actions.rs  atoms.rs  container.rs  focus_stack.rs  geometry.rs  keyman.rs  layouts.rs  mod.rs  monitors.rs  state.rs  workspace.rs
src/wm/bar/: mod.rs  title.rs  tray.rs  widgets.rs  workspace_info.rs
