[package]
name = "crubwm"
author = "Ján Kapko <kamo.bavmesa@gmail.com>"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = {version = "0.10.1", features = ["randr", "allow-unsafe-code"]}
x11 = "2.19"
cairo-rs = { version = "0.15.12", features = ["xcb"] }
